# Ser2IP32

./: CMakeLists.txt  Makefile  README.md  sdkconfig
components/FastLED-idf/: component.mk
main/: CMakeLists.txt  Kconfig.projbuild  LED_Display.cpp  LED_Display.h  Task.cpp  Task.h  commands.cpp  commands.h  constants.h  main.cpp  storage.cpp  storage.h  storage_keys.h  tcp_session.cpp  tcp_session.h  uart_server.cpp  uart_server.h  wifi.cpp  wifi.h
